--- a/sprint-1__startkit/styles/style.css
+++ b/sprint-1__startkit/styles/style.css
@@ -16,7 +16,7 @@
   height: 100vh;
   min-height: 600px;
   max-height: 756px;
-  border: 1px solid red;
+  background-color: #f2f2f2;
   /* выше установили ограничения для секции */
 }
 
@@ -24,6 +24,11 @@
 .header__square-pic {
   height: 568px;
   width: 568px;
+  background-color: #2f80ed;
+  position: absolute;
+  right: 0;
+  top: 64px;
+  z-index: 0;
 }
 
 /* и элемента с модификатором вида ключ-значение */
@@ -37,28 +42,41 @@
 .logo{
   height: 32px;
   width: 228px;
-  border: 1px solid red;
 }
 
 .logo_place_hedder{
   position: absolute;
   top: 30px;
   left: 64px;
+  z-index: 2;
 }
 
-.title{
+.header__title{
   margin-left: 64px;
   width: 730px;
   font-size: 102px;
   line-height: 96px;
   font-weight: 600;
-  border: 1px solid red;
+  z-index: 2;
 }
 
-.subtitle{
+.header__subtitle{
   position: absolute;
   left: 64px;
   bottom: 30px;
   width: 388px;
-  border: 1px solid red;
+  line-height: 25px;
+  font-size: 18px;
+  font-weight: normal;
+  z-index: 2;
 }
+
+.header__main-illustration{
+  position: absolute;
+  right: 0;
+  bottom: 0;
+  width: 765px;
+  height: 608px;
+  z-index: 1;
+}
+
