--- a/sprint-1__startkit/styles/style.css
+++ b/sprint-1__startkit/styles/style.css
@@ -82,21 +82,156 @@
 
 .description{
   display: flex;
-  border: 1px solid rgb(115, 0, 255);
   justify-content: center;
   align-items: center;
 }
 
 .two-columns{
   display: flex;
-  flex-direction: column;
+  flex-direction: row;
+  justify-content: space-between;
   width: 80%;
-  border: 1px solid red;
   margin-top: 100px;
   margin-bottom: 100px;
 }
 
 .brief{
   width: 175px;
-  border: 1px solid rgb(0, 255, 38);
+  margin-top: 0;
+  line-height: 1.2;
+  font-size: 18;
+  font-weight: normal;
+  color: #2f80ed;
+}
+
+.description__main-text{
+  display: flex;
+  flex-direction: column;
+  line-height: 34px;
+  font-size: 24px;
+  font-weight: normal;
+  width: 80%;
+  min-width: 784px;
+}
+
+.span-accent{
+  line-height: 34px;
+  font-size: 24px;
+  font-weight: 600;
+}
+
+.paragraph{
+  margin: 0;
+  margin-bottom: 30px;
+}
+.paragraph-last{
+  margin-bottom: 0;
+}
+
+.digits__section-title{
+  margin: auto;
+  margin-top: 100px;
+  width: 60%;
+  line-height: 1.15;
+  font-size: 24px;
+  font-weight: 600;
+  text-align: center;
+}
+
+.digits__section-subtitle{
+  margin: auto;
+  margin-top: 20px;
+  text-align: center;
+  width: 60%;
+  line-height: 34px;
+  font-size: 24px;
+  font-weight: normal;
+}
+
+.digits__table{
+  display: flex;
+  flex-direction: column;
+  margin: auto;
+  margin-bottom: 100px;
+  width: 1100px;
+}
+
+.digits__table__row{
+  display: flex;
+  flex-direction: row;
+  justify-content: space-between;
+  margin: 0;
+  margin-top: 60px;
+}
+
+.digits__table__cell{
+  width: 250px;
+}
+
+.digits__table__cell__heading{
+  margin: 0;
+  line-height: 1.15;
+  font-size: 24px;
+  font-weight: 600;
+}
+
+.digits__table__cell__text{
+  margin: 0;
+  margin-top: 20px;
+  line-height: 1.2;
+  font-size: 18px;
+  font-weight: 400;
+}
+
+.digits__table__cell__text__paragraph{
+  margin: 0;
+}
+
+.digits__table__cell__text__paragraph-last{
+  margin: 0;
+  margin-top: 20px;
+}
+
+.feynman{
+  margin-top: 100px;
+  height: 890px;
+  position: relative;
+  background-color: #f2f2f2;
+  z-index: -2;
+  border: 1px solid #f2f2f2;
+}
+.feynman__title{
+  margin: auto;
+  margin-top: 100px;
+  width: 648px;
+  line-height: 1.15;
+  font-size: 120px;
+  font-weight: 600;
+}
+
+.feynman__subtitle{
+  margin: auto;
+  text-align: center;
+  margin-top: 70px;
+  line-height: 51px;
+  font-size: 36px;
+  font-weight: normal;
+}
+
+.feynman__link{
+  position: absolute;
+  top: 50%;
+  right: 48px;
+  line-height: 51px;
+  font-size: 36px;
+  font-weight: normal;
+}
+
+.feynman__img{
+  width: 867px;
+  height: 637px;
+  position: absolute;
+  left: 0;
+  bottom: 0;
+  z-index: -1;
 }
