--- a/sprint-1__startkit/styles/style.css
+++ b/sprint-1__startkit/styles/style.css
@@ -198,7 +198,7 @@
   position: relative;
   background-color: #f2f2f2;
   z-index: -2;
-  border: 1px solid #f2f2f2;
+  border-top: 1px solid #f2f2f2;
 }
 .feynman__title{
   margin: auto;
@@ -233,5 +233,78 @@
   position: absolute;
   left: 0;
   bottom: 0;
+  z-index: -1;
+}
+
+.kaufman{
+  position: relative;
+  color: white;
+  background-color: #1f1f1f;
+  overflow: hidden;
+  z-index: -2;
+}
+
+.kaufman__title{
+  margin: auto;
+  margin-top: 90px;
+  width: 60%;
+  line-height: 1.15;
+  font-size: 60px;
+  font-weight: 600;
+  text-align: center;
+}
+
+.kaufman__subtitle{
+  margin: auto;
+  margin-top: 20px;
+  width: 60%;
+  text-align: center;
+  line-height: 34px;
+  font-size: 24px;
+  font-weight: normal;
+}
+
+.kaufman__table{
+  margin: auto;
+  margin-top: 0;
+  margin-bottom: 90px;
+  width: 1100px;
+  display: flex;
+  flex-direction: column;
+}
+
+.kaufman__table__row{
+  margin: 0;
+  margin-top: 80px;
+  display: flex;
+  flex-direction: row;
+  justify-content: space-between;
+}
+
+.kaufman__table__cell{
+  width: 200px;
+}
+
+.kaufman__table__cell__heading{
+  margin: 0;
+  line-height: 1.15;
+  font-size: 24px;
+  font-weight: 600;
+}
+
+.kaufman__table__cell__text{
+  margin: 0;
+  margin-top: 20px;
+  line-height: 1.2;
+  font-size: 18px;
+  font-weight: normal;
+}
+
+.kaufman__triangle{
+  width: 877px;
+  height: 877px;
+  position: absolute;
+  top: 0;
+  right: -210px;
   z-index: -1;
 }
