--- a/sprint-1__startkit/styles/style.css
+++ b/sprint-1__startkit/styles/style.css
@@ -71,6 +71,10 @@
   z-index: 2;
 }
 
+.header__link{
+  text-decoration: none;
+}
+
 .header__main-illustration{
   position: absolute;
   right: 0;
@@ -225,6 +229,7 @@
   line-height: 51px;
   font-size: 36px;
   font-weight: normal;
+  text-decoration: none;
 }
 
 .feynman__img{
@@ -307,4 +312,69 @@
   top: 0;
   right: -210px;
   z-index: -1;
+}
+
+.footer{
+  color: white;
+  background-color: #1f1f1f;
+  min-height: 350px;
+  display: flex;
+}
+
+.footer__columns{
+  margin: auto;
+  margin-top: 60px;
+  margin-bottom: 40px;
+  display: flex;
+  flex-direction: row;
+  justify-content: space-between;
+  width: 90%;
+}
+
+.footer__columns_content_copyright{
+  display: flex;
+  flex-direction: column;
+  justify-content: space-between;
+  flex-basis: 711px;
+}
+
+.footer__author{
+  margin-top: 18px;
+  margin-bottom: 18px;
+  line-height: 25px;
+  font-size: 18px;
+  font-weight: normal;
+}
+
+.footer__column__links{
+  display: flex;
+  margin-top: 20px;
+  margin-bottom: 16px;
+  flex-direction: column;
+}
+
+.footer__social-icon{
+  width: 16px;
+  height: 16px;
+  margin-right: 10px;
+}
+
+.footer__column__heading{
+  margin: 0;
+  line-height: 30px;
+  font-size: 18px;
+  font-weight: 600;
+}
+
+.footer__column__link{
+  color: white;
+  text-decoration: none;
+  line-height: 30px;
+  font-size: 18px;
+  font-weight: normal;
+}
+
+.footer__column{
+  display: flex;
+  flex-direction: column;
 }
